fix(styles): corrected multilink card gaps

--- a/packages/styles/scss/components/_multilinkcard.scss
+++ b/packages/styles/scss/components/_multilinkcard.scss
@@ -20,6 +20,7 @@
       #{$self}--content {
         #{$self}--image--wrapper {
           display: block;
+          margin-bottom: spacing(8);
         }
       }
 
@@ -33,37 +34,21 @@
 
       #{$self}--title {
         @include font-styles("headline-5");
-        @include textmargin(
-          "margin-bottom",
-          24px,
-          "headline-5",
-          "display",
-          0,
-          0
-        );
+        margin-bottom: spacing(8);
         color: $brand-ilo-grey-charcoal;
 
         @include breakpoint("medium") {
           @include font-styles("headline-4");
-          @include textmargin(
-            "margin-bottom",
-            24px,
-            "headline-4",
-            "display",
-            0,
-            0
-          );
         }
       }
 
       #{$self}--intro {
         @include font-styles("body-small");
-        @include textmargin("margin-bottom", 40px, "body-small", "copy", 0, 0);
+        margin-bottom: spacing(8);
         color: $brand-ilo-grey-charcoal;
 
         @include breakpoint("medium") {
           @include font-styles("base");
-          @include textmargin("margin-bottom", 40px, "base", "copy", 0, 0);
         }
       }
 
@@ -85,35 +70,21 @@
           #{$self}--content {
             #{$self}--image--wrapper {
               display: block;
-              margin-bottom: px-to-rem(24px);
+              margin-bottom: spacing(6);
             }
           }
 
           #{$self}--title {
             @include breakpoint("medium") {
               @include font-styles("headline-5");
-              @include textmargin(
-                "margin-bottom",
-                24px,
-                "headline-5",
-                "display",
-                0,
-                0
-              );
+              margin-bottom: spacing(6);
             }
           }
 
           #{$self}--intro {
             @include breakpoint("medium") {
               @include font-styles("body-small");
-              @include textmargin(
-                "margin-bottom",
-                40px,
-                "body-small",
-                "copy",
-                0,
-                0
-              );
+              margin-bottom: spacing(6);
             }
           }
         }
@@ -123,6 +94,10 @@
           --max-width: #{px-to-rem(1104px)};
 
           padding: spacing(10) spacing(6) spacing(12);
+
+          #{$self}--title {
+            margin-bottom: spacing(3);
+          }
 
           @include breakpoint("medium") {
             padding: spacing(14) spacing(12);
@@ -155,7 +130,6 @@
       }
 
       .ilo--link-list {
-        margin-top: px-to-rem(35px);
         position: relative;
         z-index: 3;
       }
